unpackaged/main/default/objects/Add_On__c/Add_On__c.object-meta.xml
<CustomObject>
    <label>Add On</label>
    <nameField>
        <displayFormat>AO-{0000}</displayFormat>
        <label>Add On Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add On</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>