unpackaged/main/default/objects/Add_On__c/fields/Additional_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Domain_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Domain Name</label>
    <type>Checkbox</type>
</CustomField>