unpackaged/main/default/objects/Add_On__c/fields/AOX_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>AOX_Monthly_Fee__c</fullName>
    <label>AOX Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>