unpackaged/main/default/objects/Add_On__c/fields/AOX_Quantity__c.field-meta.xml
<CustomField>
    <fullName>AOX_Quantity__c</fullName>
    <label>AOX Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>