unpackaged/main/default/objects/Add_On__c/fields/AOX_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>AOX_Total_Cost__c</fullName>
    <formula>AOX_Quantity__c *  AOX_Monthly_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOX Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>