unpackaged/main/default/objects/Add_On__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base</label>
    <type>Checkbox</type>
</CustomField>