unpackaged/main/default/objects/Add_On__c/fields/Base_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Base_Annual_Cost__c</fullName>
    <formula>Base_Fixed_Cost__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>