unpackaged/main/default/objects/Add_On__c/fields/Base_Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Base_Fixed_Cost__c</fullName>
    <label>Base Monthly Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>