unpackaged/main/default/objects/Add_On__c/fields/CCC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CCC_Quantity__c</fullName>
    <label>CCC Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>