unpackaged/main/default/objects/Add_On__c/fields/CCC_Total_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>CCC_Total_Annual_Cost__c</fullName>
    <formula>CCC_Quantity__c *  CCC_Monthly_Fee__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCC Total Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>