unpackaged/main/default/objects/Add_On__c/fields/Cegid_Retail_Y2_connector__c.field-meta.xml
<CustomField>
    <fullName>Cegid_Retail_Y2_connector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cegid Retail Y2 connector</label>
    <type>Checkbox</type>
</CustomField>