unpackaged/main/default/objects/Add_On__c/fields/Click_Collect_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Click_Collect_Total_Price__c</fullName>
    <label>Click &amp; Collect Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>