unpackaged/main/default/objects/Add_On__c/fields/Click_Collect_Widget__c.field-meta.xml
<CustomField>
    <fullName>Click_Collect_Widget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Click &amp; Collect Widget</label>
    <type>Checkbox</type>
</CustomField>