unpackaged/main/default/objects/Add_On__c/fields/CLX_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>CLX_Total_Cost__c</fullName>
    <formula>CLX_Volume_Per_Month__c *  CLX_Monthly_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLX Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>