unpackaged/main/default/objects/Add_On__c/fields/CLX_Volume_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>CLX_Volume_Per_Month__c</fullName>
    <label>CLX Volume Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>