unpackaged/main/default/objects/Add_On__c/fields/Conversion_CVX__c.field-meta.xml
<CustomField>
    <fullName>Conversion_CVX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion (CVX)</label>
    <type>Checkbox</type>
</CustomField>