unpackaged/main/default/objects/Add_On__c/fields/Credit_Card_Check_CCC__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Check_CCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Check (CCC)</label>
    <type>Checkbox</type>
</CustomField>