unpackaged/main/default/objects/Add_On__c/fields/CVX_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>CVX_Monthly_Fee__c</fullName>
    <label>CVX Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>