unpackaged/main/default/objects/Add_On__c/fields/CVX_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CVX_Quantity__c</fullName>
    <label>CVX Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>