unpackaged/main/default/objects/Add_On__c/fields/CVX_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>CVX_Total_Cost__c</fullName>
    <formula>CVX_Quantity__c *  CVX_Monthly_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CVX Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>