unpackaged/main/default/objects/Add_On__c/fields/Digital_Commerce_Option_Price__c.field-meta.xml
<CustomField>
    <fullName>Digital_Commerce_Option_Price__c</fullName>
    <label>Digital Commerce Option Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>