unpackaged/main/default/objects/Add_On__c/fields/Digital_Commerce_Options__c.field-meta.xml
<CustomField>
    <fullName>Digital_Commerce_Options__c</fullName>
    <label>Digital Commerce Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>StoreFront APIs For Other Channels</fullName>
            </value>
            <value>
                <fullName>Distance Selling Checkout</fullName>
            </value>
            <value>
                <fullName>Webfront</fullName>
            </value>
            <value>
                <fullName>Additional Domain Name</fullName>
            </value>
            <value>
                <fullName>Digital Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>