unpackaged/main/default/objects/Add_On__c/fields/Distance_Selling_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Distance_Selling_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distance Selling Checkout</label>
    <type>Checkbox</type>
</CustomField>