unpackaged/main/default/objects/Add_On__c/fields/For_Magento_2__c.field-meta.xml
<CustomField>
    <fullName>For_Magento_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Magento 2</label>
    <type>Checkbox</type>
</CustomField>