unpackaged/main/default/objects/Add_On__c/fields/Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketplace</label>
    <type>Checkbox</type>
</CustomField>