unpackaged/main/default/objects/Add_On__c/fields/Marketplace_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Annual_Cost__c</fullName>
    <formula>Marketplace_Fixed_Cost__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketplace Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>