unpackaged/main/default/objects/Add_On__c/fields/Marketplace_Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Fixed_Cost__c</fullName>
    <label>Marketplace Monthly Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>