unpackaged/main/default/objects/Add_On__c/fields/OMS_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>OMS_Total_Price__c</fullName>
    <label>OMS Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>