unpackaged/main/default/objects/Add_On__c/fields/Payload_Filter_Calls_CLX__c.field-meta.xml
<CustomField>
    <fullName>Payload_Filter_Calls_CLX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payload Filter Calls (CLX)</label>
    <type>Checkbox</type>
</CustomField>