unpackaged/main/default/objects/Add_On__c/fields/Payment_Gateway_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Total_Cost__c</fullName>
    <formula>Base_Annual_Cost__c + Marketplace_Annual_Cost__c + Tokenisation_Annual_Cost__c + Processing_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Gateway Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>