unpackaged/main/default/objects/Add_On__c/fields/PCI_Proxy_Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>PCI_Proxy_Fixed_Cost__c</fullName>
    <label>PCI Proxy Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>