unpackaged/main/default/objects/Add_On__c/fields/PCI_Proxy_Option__c.field-meta.xml
<CustomField>
    <fullName>PCI_Proxy_Option__c</fullName>
    <label>PCI Proxy Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>