unpackaged/main/default/objects/Add_On__c/fields/PCI_Proxy_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>PCI_Proxy_Total_Cost__c</fullName>
    <formula>PCI_Proxy_Fixed_Cost__c +  CLX_Total_Annual_Cost__c +  AOX_Total_Annual_Cost__c +  CCC_Total_Annual_Cost__c +  RCV_Total_Annual_Cost__c +   CVX_Total_Annual_Cost__c +  SDC_Total_Annual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCI Proxy Total Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>