unpackaged/main/default/objects/Add_On__c/fields/Per_DC_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Per_DC_Implementation__c</fullName>
    <label>Per DC Implementation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>