unpackaged/main/default/objects/Add_On__c/fields/Per_Independently_Managed_Brand__c.field-meta.xml
<CustomField>
    <fullName>Per_Independently_Managed_Brand__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Per Independently Managed Brand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>