unpackaged/main/default/objects/Add_On__c/fields/Per_Website__c.field-meta.xml
<CustomField>
    <fullName>Per_Website__c</fullName>
    <label>Per Website</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>