unpackaged/main/default/objects/Add_On__c/fields/Processing_Prepaid_Package__c.field-meta.xml
<CustomField>
    <fullName>Processing_Prepaid_Package__c</fullName>
    <description>For Payment Gateway Product - Saurabh 10/05/22</description>
    <label>Processing - Prepaid Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>