unpackaged/main/default/objects/Add_On__c/fields/Processing_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Processing_Total_Cost__c</fullName>
    <formula>(Processing_Volume__c *  Processing_Fee__c) + Processing_Prepaid_Package__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>