unpackaged/main/default/objects/Add_On__c/fields/Processing_Volume__c.field-meta.xml
<CustomField>
    <fullName>Processing_Volume__c</fullName>
    <label>Processing Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>