unpackaged/main/default/objects/Add_On__c/fields/RCV_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>RCV_Total_Cost__c</fullName>
    <formula>RCV_Quantity__c *  RCV_Monthly_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RCV Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>