unpackaged/main/default/objects/Add_On__c/fields/Receiver_RCV__c.field-meta.xml
<CustomField>
    <fullName>Receiver_RCV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receiver (RCV)</label>
    <type>Checkbox</type>
</CustomField>