unpackaged/main/default/objects/Add_On__c/fields/SDC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SDC_Quantity__c</fullName>
    <label>SDC Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>