unpackaged/main/default/objects/Add_On__c/fields/SDC_Total_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>SDC_Total_Annual_Cost__c</fullName>
    <formula>SDC_Quantity__c *  SDC_Monthly_Fee__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDC Total Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>