unpackaged/main/default/objects/Add_On__c/fields/Shared_Domain_Certification_SDC__c.field-meta.xml
<CustomField>
    <fullName>Shared_Domain_Certification_SDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared Domain Certification (SDC)</label>
    <type>Checkbox</type>
</CustomField>