unpackaged/main/default/objects/Add_On__c/fields/Smart_POS_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Smart_POS_Total_Price__c</fullName>
    <label>Smart POS Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>