unpackaged/main/default/objects/Add_On__c/fields/SPOS_Price__c.field-meta.xml
<CustomField>
    <fullName>SPOS_Price__c</fullName>
    <label>SPOS Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>