unpackaged/main/default/objects/Add_On__c/fields/StoreFront_APIs_For_Other_Channels__c.field-meta.xml
<CustomField>
    <fullName>StoreFront_APIs_For_Other_Channels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StoreFront APIs For Other Channels</label>
    <type>Checkbox</type>
</CustomField>