unpackaged/main/default/objects/Add_On__c/fields/Subscription_Fees__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fees__c</fullName>
    <label>Subscription Fees</label>
    <referenceTo>Subscription_Fees__c</referenceTo>
    <relationshipLabel>Add On</relationshipLabel>
    <relationshipName>Add_On</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>