unpackaged/main/default/objects/Add_On__c/fields/Tokenisation__c.field-meta.xml
<CustomField>
    <fullName>Tokenisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tokenisation</label>
    <type>Checkbox</type>
</CustomField>