unpackaged/main/default/objects/Add_On__c/fields/Tokenisation_Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tokenisation_Fixed_Cost__c</fullName>
    <label>Tokenisation Monthly Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>