unpackaged/main/default/objects/Add_On__c/fields/Total_Add_On_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Add_On_Price__c</fullName>
    <formula>Click_Collect_Total_Price__c + OMS_Total_Price__c + Smart_POS_Total_Price__c + Digital_Commerce_Option_Price__c + PCI_Proxy_Total_Cost__c + Payment_Gateway_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Add On Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>