unpackaged/main/default/objects/Add_On__c/fields/Web_Content_Management_CMS__c.field-meta.xml
<CustomField>
    <fullName>Web_Content_Management_CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Content Management (CMS)</label>
    <type>Checkbox</type>
</CustomField>