unpackaged/main/default/objects/Add_On__c/fields/Webfront__c.field-meta.xml
<CustomField>
    <fullName>Webfront__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webfront</label>
    <type>Checkbox</type>
</CustomField>