unpackaged/main/default/objects/Add_On__c/fields/X3_D_Secure_Authentification_Only_AOX__c.field-meta.xml
<CustomField>
    <fullName>X3_D_Secure_Authentification_Only_AOX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3-D Secure Authentification Only (AOX)</label>
    <type>Checkbox</type>
</CustomField>